--- a/Tobias Lear.page
+++ b/Tobias Lear.page
@@ -1,1 +1,2 @@
 - After Cathcart was rejected by Algiers as a replacement for [Richard O'Brien](), Lear was cast for the role (BW2:431)
+- SecState writes to Lear: " The opinion the President entertains of your unshaken integrity and firmness has led him to select you for the Office of Consul General at Algiers, a station in which those qualities are eminently requisite, and which, as well on that account ae of the importance of the trust to the peace & interests of your Country, is considered as highly honorable." (BW2:482, 14 July 1803) 
