--- a/Front Page.page
+++ b/Front Page.page
@@ -26,6 +26,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Engagements with Tripoli]()
 - [Gender]()
 - [Honor]()
+- [Internal power struggles in Tripoli]()
 - [International law]()
 - [Labor]()
 - [Negotiation strategies]()
