--- a/Cruises.page
+++ b/Cruises.page
@@ -21,6 +21,7 @@ Commodore: Richard Valentine Morris
 - 
 
 ## Cruise 3
+- **Important**: Preble's cruise was different from the others in that it was primarily made up of lighter ships; fewer frigates. In other words, the navy department was genuinely trying to follow the advice given by the previous commanders and diplomats.
 - Resume of ships: BW3:11-12
 - BW2:414: [Edward Preble]() reports that the [USS *Constitution*]() needs to be heaved down and thus won't be ready for another 7 or 8 weeks, 22 May 1803
 - BW2:420: [USS *Philadelphia*]() delayed in getting to sea for want of spars (24 May 1803)
