--- a/Strategy.page
+++ b/Strategy.page
@@ -41,4 +41,6 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 
 # [Convoy]() duty
 
+# [Direct attack]()
+
 # [Tripolitan strategy]()
