high merchant wages

--- a/Labor.page
+++ b/Labor.page
@@ -1,3 +1,4 @@
 - The Navy employed hundreds of men, not just seaman (skilled or otherwise) but also dock workers of all kinds. 
 
 - BW2:452: [Charles Stewart]() reports that the carpenters working on the [USS *Siren*]() "has demanded an increase of pay & none of them has done any work since saturday last this is an unavoidable accident & if they do not return to thier work, it will make a considerable difference in the time of lanching" (15 June 1803)
+- BW2:494: [Edward Preble]() reports that a rise in the wages of merchant sailors has caused him difficulty in recruiting: " The men we have engaged here, are not such as I wish wages are so high in the merchant service that the best men will not ship with us - I do not believe that I have twenty native American Sailors on board" (21 July 1803) 
