--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -1,6 +1,8 @@
 Naval officers often gave clues about how they perceived their enemies and even their allies in the Mediterranean. Specific people were singled out, but often the comments of the officers encompassed entire groups.
 
 # Barbary 
+- BW2:495: Reaction of American sailors to a Tunisian vessel that they brought to: "had she been a Tripoline she would have been prize for the Men were all hot for Battle, friends or Foes. - The sight of a Turban soon enrages them" (22 July 1803) 
+
 ## Cowardly
 - [John R. Fenwick](), 3 February 1802: "none of our Vessels as yet have been taken, & whilst the Dread of the Americans exists, the pusillanimity of these people will prevent them leaving their Ports" (BW2:47)
 - [Henry Wadsworth]() implies that the people of Tripoli are cowardly in their response to the [USS *John Adams*]() firing a broadside into the town: "These shot went thro' the Bashaw's Palace, his favorite wife fainted all was confusion in the
