--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -16,3 +16,4 @@ City -running to & fro: The next day, when the J. Adams stood in for the City ag
 
 # Europeans
 - [Alexander Murray]() sees Europeans as cowardly and selfish: " Why will the narrow & selfish policy of European nations suffer those Piratical powers thus to usurp the dominion of this Sea? Ought they not rather to be put under the Ban of all civilization? Was there a chance of making war with them, upon such terms as not to effect the liberty of those, who fall into their hands, & to exchange man for man, some excuse might be alledged, but on the present form of warfare, all nations ought to cry aloud against them." (BW2:155, 18 May 1802)
+- [Henry Wadsworth]() notes the interest the people of Naples have in the [Meshouda](): "a Tripoline vessel, which to them is a rare sight, for in their wars with the Barbarians they have shewn themselves such infamous cowards, that a capture on their part rarely occurs" (30 July 1803, BW2:502)
