rain rain go away

--- a/Weather.page
+++ b/Weather.page
@@ -1,3 +1,5 @@
+## In the Mediterranean
+
 Weather was a significant factor in whether or not American naval vessels were on station in the blockade.
 
 - BW2:15: [Samuel Barron]() reports that stormy weather destroyed many vessels at Malta in late December 1801, including rudder and sail damage to several British naval vessels (including a 74)
@@ -19,4 +21,7 @@ seamen went overboard with the rigging & were lost." (See also [Physical acciden
     - Facts seem to bear out his concern: He records that he could not get out of Malta for several days at the end of December 1802 because of wind; he could not approach Tripoli at all; instead, it took him more than two weeks to get from Malta to Tunis, arriving on 22 January 1803
 - BW2:343: It takes almost two weeks for [Alexander Murray]() to cross from Gibraltar to Tangier because of storms in the straits; he escapes being driven on shore, though, unlike 14 other vessels (11 January 1803)
     - He never actually makes it to Tangier, calling instead at Tetuan; after trying to get to Tangier a few more times, he gives up and goes home rather than collecting the dispatches he intended to (BW2:373)
-- BW2:356: [Henry Wadsworth]() records that " it has been a continual gale: The Deck directly over my Cot leaks very much, of course my bed & bedding are much wet as the Element water is continually in boisterous weather washing over the Gun Deck: at 12 my Friend Cram will turn out to keep his watch when I will turn into his Cot which hangs in a dry place: As for me being officer of the Signals - I keep no watch, which I assure is very agreeable as we expect much Stormy & Tempestuous weather during our Cruize off Tripoly, whither we are bound" (31 January 1803)
+- BW2:356: [Henry Wadsworth]() records that " it has been a continual gale: The Deck directly over my Cot leaks very much, of course my bed & bedding are much wet as the Element water is continually in boisterous weather washing over the Gun Deck: at 12 my Friend Cram will turn out to keep his watch when I will turn into his Cot which hangs in a dry place: As for me being officer of the Signals- I keep no watch, which I assure is very agreeable as we expect much Stormy & Tempestuous weather during our Cruize off Tripoly, whither we are bound" (31 January 1803)
+
+## In America
+- BW2:502: Both the [USS *Constitution*]() and the [USS *Argus*]() are delayed in preparations because of rain, 1 August 1803
