failure of communication

--- a/Communications.page
+++ b/Communications.page
@@ -9,6 +9,7 @@
 - 20 December 1802: [Alexander Murray]() uses [Hugh G. Campbell]() and the [USS *Adams*]() as an errand boy from Gibraltar to Tangier, telling Campbell to run over to Tangier and tell [James Simpson]() that Murray will call on him on his way out: so that "he may be prepared to furnish himself with the best knowledge of the Emperor of Morocco's disposition towards us, so as not to delay me, the Weather being very precarious at this season of the Year" (BW2:336)
 - 2 February 1803: [Richard O'Brien]() writes to [John Gavino]() that because "our affairs are Verging on to a Lee shore and no Calculating on the force of the Deys squalls you will pleas to direct for me under Cover to Mr Nordeling the Swede Consul at Algiers" (BW2:357)
 - 13 July 1803: SecNav orders [Edward Preble]() to maintain contact with the diplomats in the other Barbary states (BW2:476)
+- 1 August 1803: [James Leander Cathcart]() writes to [Richard Valentine Morris]() with a dizzying account of all the places and ways he tried to get to somewhere that he could meet up with Morris, only to not be able to actually connect with him (BW2:503)
 
 ## Communications amongst the squadron
 - Communications were terribly slow even though the space the squadron occupied was not that large
