--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -42,6 +42,13 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 400 bushels of pease
     - *Federal Eagle* chartered for this task (28 April 1803)
         - *Federal Eagle* has fifteen days starting 3 May 1803 to get to sea, and fifteen days to unload once she reaches Gibraltar (BW2:395)
+- BW2:504: SecNav orders [Thomas Tingey]() to charter a supply ship for the squadron, 2 August 1803, carrying to Gibraltar:
+    - 350 barrels of beef
+    - 300 barrels of pork
+    - 120,000 lb of bread
+    - 60 barrels of flour
+    - 18,000 lb of rice
+    - 450 bushels of pease
 - Other charters (BW2:395-96):
     - 27 May 1803: *Monsoon* (BW2:425)--uncertain when this ship actually departed
     - 1 June 1803: *Betsy Walk*--also carried timber for Algiers
