--- a/USS Argus.page
+++ b/USS Argus.page
@@ -1,2 +1,3 @@
 - Building of this brig supervised by [Stephen Decatur]()
 - Originally named *Merrimack*
+- Took $30,000 on board to give to [Edward Preble]() for disbursement amongst the squadron (BW2:517, 22 August 1803)
