--- a/Mirboka.page
+++ b/Mirboka.page
@@ -8,5 +8,4 @@
 - Mirboka claimed that they were helping the *Celia* and she was not a prize
 - Mirboka did have a passport from [James Simpson]()
 - Upon sending his first lieutenant on board to search for prisoners, [William Bainbridge]() discovered that there were in fact prisoners and the *Celia* was in fact captured
-- "I made no hesitation in Capturing her after such promdings on their
-part and Violation of the faith of Passports which ought to be Sacred"
+- "I made no hesitation in Capturing her after such proceedings on their part and Violation of the faith of Passports which ought to be Sacred"
