--- a/Mirboka.page
+++ b/Mirboka.page
@@ -9,3 +9,8 @@
 - Mirboka did have a passport from [James Simpson]()
 - Upon sending his first lieutenant on board to search for prisoners, [William Bainbridge]() discovered that there were in fact prisoners and the *Celia* was in fact captured
 - "I made no hesitation in Capturing her after such proceedings on their part and Violation of the faith of Passports which ought to be Sacred"
+- Took the crew on board the *Philadelphia*
+- Bad weather meant they lost the prize several times during the night and spent the whole next day chasing her
+- "The Moors Confess that they came out aCruising for the sole purpose of Capturing Americans to be sent to Tanger."
+- Bainbridge writes: "I have recd a paper from them writen in Moorish which they say is their authority from the Govr of Tanger for so doing - I inclose this to John Gavino Esqr with a particular request to have it safely Conveyd to you that you may be informed of the Circumstance and act accordingly. I beleive the Govenour of Tanger is much disposed for Hostilities with the U. S., the Moorish Prisoners accuse him as the sole cause of their present Cituation. I sincerely hope that this Capture may be productive of good Effects to the U. S. with the Empr who may be assured that if he injustly goes to War with the U. S. he will loose every large Cruiser he has, & God grant that it may not in the least prove a disadvantage to you. My Officers and self have made it a Markd point to treat the Prisoners not only with the lenity that is due from Humanity but with particular attention of Civility to impress on their mind a favourable Opinion of the American Character"
+- See also [Relations with Morocco]().
