barber slits his throat

--- a/Other medical events.page
+++ b/Other medical events.page
@@ -2,3 +2,5 @@
 
 - BW2:387: [Henry Wadsworth]() records the birth of Melancthon Woolsey Low, son of James Low, captain of the forecastle on the [USS *Chesapeake*](), 22 February 1803
     - The baby was baptized in the midshipman's berth of his godfather, Midshipman Melancthon Woolsey: "All was conducted with due decorum & decency no doubt to the great satisfaction of the parents, as Mr Woolsey's attention to them must in some measure have ameliorated the unhappy situation of the Lad who was so unfortunate as to concieve & bare, on the Salt Sea. NB. The other Ladies of the Bay* - * The Forward Most part of the Birth Deck - vis. Mrs Watson: the Boatswain's Wife, Mrs Myres the Carpenter's Lady - with Mrs Crosby the corporal's Lady: got drunk in their own Quarters out of pure spite - not being invited to celebrate the Christening of Melancthon Woolsey Low." 
+
+- BW2:523: John Adams, ship's barber on the [USS *Siren*]() tried to kill himself by slitting his throat, but he couldn't manage it (29 August 1803)
