Snuff box for Nissen

--- a/Nicholas Nissen.page
+++ b/Nicholas Nissen.page
@@ -3,3 +3,4 @@ Nicholas C. Nissen seems to have been the Americans' man on the ground in Tripol
 - 28 July 1801: [Richard Dale]() writes to Nissen asking him to get the bey (the bashaw?) to explain why he has broken faith---this seems like a job for an American diplomat, but Nissen was the best they had.
 - 2 September 1801: Dale asks Nissen to negotiate a prisoner exchange with Tripoli (BW1:568)
 - 31 August 1802: Despite Nissen's telling the navy that he could no longer act as their charge d'affaires, [James Leander Cathcart]() continues to use him to carry messages to the bashaw, specifically about the exchange of prisoners from the *Franklin*]() (BW2:261)
+- 30 August 1803: [James Leander Cathcart]() recommends a letter of thanks and a $500-600 snuff box as a gift to Nissen for his help (BW2:525)
