re-establishment of peace with morocco

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -43,6 +43,10 @@
 
 ## Tenuous peace
 - [James Simpson]() repeatedly entreats [Richard Valentine Morris]() to post a ship or two near Morocco, just in case the Moroccan emperor should get any ideas about declaring war again: "I will not pretend to say it is America they intend to break with, but this I am certain, if they do it might have been prevented by one or two Frigates being constantly kept on this Station, the propriety of which I have long ago seen & mentioned to Government" (26 July 1803, BW2:498)
+- BW3:8: [James Simpson]() writes to the emperor of Morocco after the taking of the *Mirboka*: " I beg leave to answer Your Majesty that I am highly disposed to receive such propositions as Your Majesty may be leased to make tho' me for a re-establishment of Peace, which I will transmit to the Commanding Officer of our Squadron in these Seas who is daily expected at Gibraltar, or send them on to America as circumstances may appear to render most proper for furtherance of the Grand object in view."
+    - He outlines several things Morocco needs to do in order to be friends again:
+    - Withdraw permission for Moroccan cruisers to attack American ships
+    - Release Simpson from house arrest
 
 # Other nations' relations with Morocco
 - James Simpson reports on others' relations with Morocco:
