--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -47,6 +47,7 @@
     - He outlines several things Morocco needs to do in order to be friends again:
     - Withdraw permission for Moroccan cruisers to attack American ships
     - Release Simpson from house arrest
+- BW3:10: [James Simpson]() suggests that the *Mirboka* was given permission to attack Americans not by the emperor himself, but by Alcayde Hashash, " in whom the Emperor has of late placed unbonded confidence, insomuch that we have seen acts of his of a most extraordinary nature sanctioned by his master" (3 September 1803) 
 
 # Other nations' relations with Morocco
 - James Simpson reports on others' relations with Morocco:
