John Adams convoy

--- a/Convoy.page
+++ b/Convoy.page
@@ -62,3 +62,4 @@ what is worse, Slavery", 15 July 1802
     - BW2:263: Touched at Malaga, apparently, and left 26 August 1802 with 30 vessels (American and Swedish) under convoy for Leghorn
 - BW2:334: [USS *Constellation*]() convoys 4 vessels from Malaga to Gibraltar, 15 December 1802
 - BW2:381: [USS *Chesapeake*]() convoyed one vessel from Leghorn to Palermo, 3 November 1802
+- BW3:18: [USS *John Adams*]() convoys 5 vessels somewhere around Spain
