--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -42,7 +42,7 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 400 bushels of pease
     - *Federal Eagle* chartered for this task (28 April 1803)
         - *Federal Eagle* has fifteen days starting 3 May 1803 to get to sea, and fifteen days to unload once she reaches Gibraltar (BW2:395)
-- BW2:504: SecNav orders [Thomas Tingey]() to charter a supply ship for the squadron, 2 August 1803, carrying to Gibraltar:
+- BW2:504: SecNav orders [Thomas Tingey]() to charter a supply ship for the squadron, 2 August 1803, carrying to Gibraltar (possibly the *Traveller*, Captain Billups (BW3:18)):
     - 350 barrels of beef
     - 300 barrels of pork
     - 120,000 lb of bread
