--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -48,6 +48,7 @@
     - Withdraw permission for Moroccan cruisers to attack American ships
     - Release Simpson from house arrest
 - BW3:10: [James Simpson]() suggests that the *Mirboka* was given permission to attack Americans not by the emperor himself, but by Alcayde Hashash, " in whom the Emperor has of late placed unbonded confidence, insomuch that we have seen acts of his of a most extraordinary nature sanctioned by his master" (3 September 1803) 
+- BW3:19: SecNav orders [Thomas Tingey]() to prepare 100 gun carriages for the emperor of Morocco quickly: "the exertions must be made to accomplish the business soon all other engagements must yield to this" (5 September 1803)
 
 # Other nations' relations with Morocco
 - James Simpson reports on others' relations with Morocco:
