--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -13,6 +13,7 @@ City -running to & fro: The next day, when the J. Adams stood in for the City ag
 
 ## Deceitful
 - [Hugh G. Campbell]() writes to [William Burrows](): "Be assured Sir, they [specifically the Moroccans] are Slippery Politicians, & require good Looking after Either in peace or war" (BW2:335, 16 December 1802)
+- [James Simpson]() writes of [Alcayde Hashash]() of Morocco: "I confess I cannot have full reliance on all that Man says, as by subterfuge it is not uncommon with him to evade declaring facts" (BW3:19, 5 September 1803) 
 
 # Europeans
 - [Alexander Murray]() sees Europeans as cowardly and selfish: " Why will the narrow & selfish policy of European nations suffer those Piratical powers thus to usurp the dominion of this Sea? Ought they not rather to be put under the Ban of all civilization? Was there a chance of making war with them, upon such terms as not to effect the liberty of those, who fall into their hands, & to exchange man for man, some excuse might be alledged, but on the present form of warfare, all nations ought to cry aloud against them." (BW2:155, 18 May 1802)
