--- a/Economy.page
+++ b/Economy.page
@@ -44,4 +44,9 @@ From [Thomas Jefferson]()'s [first inaugural address](https://jeffersonpapers.pr
 
 ## Barriers to commerce: corsair tactics
 - BW1:602: Report that some Tripoline corsairs have taken English papers and Minorcan crews in order to avoid search and seizure by the American squadron, 24 October 1801
-- 
+
+# Insurance concerns
+
+One of the reasons put forth by scholars about why American shipping was suffering was the high insurance premiums that would be levied if American ships were taken
+
+- BW3:20: [James Simpson]() writes that one of his strong inducements to keep the peace with Morocco is "the Commerce might not meet interuption or be burthen'd with heavy Insurance beyond the actual Risque" (5 September 1803)
