--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -74,6 +74,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - [Alexander Murray]() reports very favorable reception at Malta from Admiral Sir Richard Bickerton and Gov. Alexander Ball, 22 August 1802 (BW2:247)
 - [James Simpson]() notes that there are French and British privateers in the seas around Morocco; the British detain any neutral vessels they find coming to or from French ports (28 July 1803, BW2:500)
 - BW3:21-22: [Thomas Trigge](), governor of Gibraltar, is prepared to admit the [*Meshouda*]() to Gibraltar provided [John Gavino]() is not planning to sell any part of her; he also notes, "I also hope that she may not long remain in this Port as it will tend to embroil us with the Empr of Morrocco; the Mischivious consequences of which you are well acquainted with" (6 September 1803) 
+    - BW3:22: [John Gavino]() demurs: he doesn't think it will be sold but he can't guarantee it; but he assures Trigge that the commodore will "act in every respect so as to prevent any Embroils, and at same time keep up the good Harmoney which subsists between His Majy the King of the United Kingdoms and the Goverment of the U. S. of America" (6 September 1803)
 
 ## Naples
 - Lt. [John Shaw]() reports that Naples wants to make a treaty with the USA, and that the governor of Naples has given orders to accommodate the American navy in any way possible, 9 February 1802 (BW2:57)
