--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -20,6 +20,7 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - [James Simpson]() was indeed forced to retire from Morocco as consul, 25 June 1802 (BW2:183); he issues a circular warning all ships not to travel through the Straits unconvoyed
 - BW2:296: [Richard Valentine Morris](), hearing from [Alexander Murray]() that there is plenty of bread in Tripoli and provisions are cheap, authorizes passports for Moroccan ships wanting to carry wheat to Tripoli, reasoning that it won't make that much difference for Tripoli but it might smooth over relations with Morocco, 15 October 1802
 - BW2:456: [James Simpson]() writes about passport given to the *Meshouda*: "Entrance into blockaded Ports I was specialy carefull to restrain by the Passport given for the Meshouda, as that has been violated we are to consider what has been the conduct towards other Vessels in same prediccament since the blockade of Tripoly has existed, I believe it has been to turn them away on the first attempt" (20 June 1803)
+- BW3:23: [Tobias Lear]() has to go and verify that the passport issued to the *Maimona* of Morocco was legitimate (he does in fact verify the handwriting and seal on the passport as genuine) (7 September 1803)
 
 ## Other nations' relations with the Barbary states
 - BW2:67: [Nicholas Nissen]() expresses surprise at how the Swedish ships have taken hostile action against Tripoli while they are still technically at peace with Tripoli, 21 April 1802
