--- a/Cruises.page
+++ b/Cruises.page
@@ -19,6 +19,7 @@ Commodore: Richard Valentine Morris
 - [Alexander Murray]() is given command of the squadron until Morris can arrive; he wastes no time issuing orders and making his presence known---castigating [William Eaton]() for waste of public funds; sending ships home or to different stations
 - [Richard Valentine Morris]() writes: "You may rest assured, Sir, that every exertion on my part shall be made, to place the United States on friendly terms with these powers, and in the event of war, that all possible means shall be used to preserve the dignity of our nation, and protect the commerce of our country" (BW2:297, 15 October 1802) 
 - BW2:526-531: Summation of cruise, as evidence against Richard Valentine Morris
+- [Henry Wadsworth]() seems astonished when [Richard Valentine Morris]() is ordered home--perhaps he thought everything was going well? "We learn! Strange to tell!!! We learn that the Commodore is order'd home" (BW3:30; 12 September 1803)
 
 ## Cruise 3
 - **Important**: Preble's cruise was different from the others in that it was primarily made up of lighter ships; fewer frigates. In other words, the navy department was genuinely trying to follow the advice given by the previous commanders and diplomats.
