--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -52,6 +52,9 @@
 - BW3:20-21: William Court & Co. writes to [John Gavino]() that an American sloop of war should be dispatched to patrol and prevent *American* ships from entering Mogadore while relations with Morocco are uncertain, as one American brig has already been detained while things are uncertain (5 September 1803)
 - BW3:26: Emperor of Morocco writes to the American consuls in Morocco (which would be [James Simpson]()? Anyone else?) that no consul is under arrest or will be captured in the event of war, but that the whole situation with the *Meshouda* is a big misunderstanding, and the ship should be brought to Tangier to sort things out (11 September 1803)
 
+### Further rumblings of war
+- BW3:31: [Edward Preble]() takes a more aggressive approach when he arrives in the Mediterranean: "The Emperors late gross Violation of our treaty in issuing Orders to his Cruisers, to Capture American Vessels, and one of his ships the Mirboka, Captain Abrahim Lubarez actually having taken one, will justify my giving Orders to the Captains of the Squadron under my command, to capture and bring into Port all vessels belonging to the Emperor of Morocco, or armed vessels belonging to his subjects, as I must consider them as acting under the Authority of the Emperor in capturing our vessels, knowlng that they dare not act without such Authority, and if I can asscertain that the Maimona or an Moorish Cruiser has captured a single American vessel, & should meet with her; you may acquaint the Emperor from me, that it is my intention in future to sink every such vessel as a Pirate, as he denies having given Orders to justify their conduct" (13 September 1803)
+
 # Other nations' relations with Morocco
 - James Simpson reports on others' relations with Morocco:
     - Russia: no relationship with Morocco
