convoy to Malta

--- a/Convoy.page
+++ b/Convoy.page
@@ -63,3 +63,4 @@ what is worse, Slavery", 15 July 1802
 - BW2:334: [USS *Constellation*]() convoys 4 vessels from Malaga to Gibraltar, 15 December 1802
 - BW2:381: [USS *Chesapeake*]() convoyed one vessel from Leghorn to Palermo, 3 November 1802
 - BW3:23: [USS *John Adams*]() convoys 6 vessels from Barcelona to Gibraltar, 3 September 1803
+- BW3:50: [Edward Preble]() orders [William Bainbridge]() and the [USS *Philadelphia*](), along with the [USS *Vixen*](), to convoy ships from Gibraltar to Malaga and then to Malta (16 September 1803)
