--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -40,6 +40,9 @@
 - An American ship fired on the vessel, and it eventually blew up, but the gunboars got away (BW2:459-60)
 - Rodgers describes the explosion: "The destruction of the before mentioned vessel, altho' awful, was one of the Grandest Spectacles I ever beheld. - After a Tremendous Explosion there appeared a Huge Column of smoke, with a Pyramid of Fire darting Vertically through its Centre interspersed with Masts, Yards, Sails Rigging, different parts of the Hull &c and the vessel in an instant dashed to Attoms" (BW2:466)
 
+### 16 September 1803
+- [Henry Wadsworth]() records that the [USS *Constitution*]() fell in with a Moorish vessel of 30 guns but let her go, as they weren't at war with the Ottomans? and the [USS *Vixen*]() fell in with a privateer and had to let her go as well (BW3:51)
+
 ## Reports of cruisers
 - 17 May 1802: [Alexander Murray]() notes that there were no Tripolitan cruisers out as of 31 April (BW2:155)
 - 1 June 1802: 1 small Tripoline galley out, plus "two Pirates on the Coast of Spain, which hath created great alarm on that Coast"---uncertain whether the two pirates are Tripolitan or not ([Alexander Murray](), BW2:163)
