--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -60,6 +60,7 @@
 - BW3:51-52: [Edward Preble]() writes to [James Simpson]() that he and [John Rodgers]() have come to Tangier in order to "[pursue] pacific measures" with Morocco, "provided it can be done with honor and propriety on the part of the United States"
     - They have brought with them the captains of the [*Meshouda*]() and *Mirboka*, as well as officers of the *Mirboka*, and they wish a representative of the Emperor to come and inspect the men and hear their story 
     - They also come with the order given to Rais Lubarez to capture American vessels, which they also invite a representative to come and inspect (17 September 1803)
+- Privately, Preble has a much harsher perspective on the situation: "Went to Tanger to demand satisfaction for the insult offered our flag in the capture of the Celia" (BW3:53, 17 September 1803)
 
 # Other nations' relations with Morocco
 - James Simpson reports on others' relations with Morocco:
