--- a/Front Page.page
+++ b/Front Page.page
@@ -24,6 +24,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Convoy]()
 - [Encounters between Europe and Barbary]()
 - [Engagements with Tripoli]()
+- [European perspectives on America]()
 - [Gender]()
 - [Honor]()
 - [Internal power struggles in Tripoli]()
