--- a/Economy.page
+++ b/Economy.page
@@ -50,3 +50,7 @@ From [Thomas Jefferson]()'s [first inaugural address](https://jeffersonpapers.pr
 One of the reasons put forth by scholars about why American shipping was suffering was the high insurance premiums that would be levied if American ships were taken
 
 - BW3:20: [James Simpson]() writes that one of his strong inducements to keep the peace with Morocco is "the Commerce might not meet interuption or be burthen'd with heavy Insurance beyond the actual Risque" (5 September 1803)
+- 
+
+## Merchants' fears
+- American merchants want answers about the true state of affairs with Tripoli, as "A very large amount of American property is now afloat in the Mediterranean--and hundreds of our valuable seamen are there employed" (Maryland Gazette (Annapolis, Maryland), Thursday, May 28, 1801; Issue 2837)
