USA beaten by Europe and Barbary

--- a/Pre-war relations with European nations.page
+++ b/Pre-war relations with European nations.page
@@ -11,6 +11,8 @@ In the 1780s and 1790s, several different perspectives emerged about how the Uni
 
 - BW1:207: Joel Barlow to Secretary of State, 18 August 1797: Further speculation about a European conspiracy to force USA out of the Mediterranean because of their success in dealing with Barbary
 
+- 11 June 1801: Letter to the editor describes how the United States is taken advantage of in the Mediterranean by both Barbary and European powers (Maryland Gazette (Annapolis, Maryland), Thursday, June 11, 1801; Issue 2839.) [Full text in Zotero]
+
 ### Britain as instigator of hostility
 - BW1:2: [Richard O'Brien]() to [Thomas Jefferson](), 8 June 1786: "I have reason to suspect that the Dey had a hint conveyed to him by the British Consul, who you may be assured is an inveterate enemy to the Americans."
 
