--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -5,6 +5,7 @@
 	- Tripoline ambassador: 90,000 pounds sterling (peace with three smaller powers); Algiers would ask for more--extrapolated by ministers plenipotentiary to $460,000-575,000 to Algiers
 	- Anonymous source in Paris: peace could be bought for $1,000,000 minimum
     - Enforcement of treaty needed by "marine force . . . in their harbor from time to time"
+- 18 August 1801: [Albert Gallatin]() writes to [Thomas Jefferson]() that "I am apt to think that there will be no fighting in the Mediterranean, & that the sight of our Frigates will be sufficient to arrange matters there" (The Papers of Thomas Jefferson Digital Edition, ed. James P. McClure and J. Jefferson Looney. Charlottesville: University of Virginia Press, Rotunda, 2008–2016.http://rotunda.upress.virginia.edu/founders/TSJN-01-35-02-0082 [accessed 25 Oct 2016])
 
 ## European practice
 -  ASP1FR1:105: Payments
