--- a/Tripoli.page
+++ b/Tripoli.page
@@ -1,5 +1,7 @@
 ## Suggestions given
+- 19 March 1801: [Joseph Barnes]() writes to [Thomas Jefferson](), "To Pay well, will ever be found a Less evil than war with these Barbarians—or the consequences may be extremely Serious to our countrymen" (The Papers of Thomas Jefferson Digital Edition, ed. James P. McClure and J. Jefferson Looney. Charlottesville: University of Virginia Press, Rotunda, 2008–2016.http://rotunda.upress.virginia.edu/founders/TSJN-01-33-02-0306 [accessed 25 Oct 2016])
 - BW2:274: [Andrew Morris]() writes to [Stephen Cathalan Jr.]() at Marseilles that the Tripolitan government is very eager to make peace, and if the American commodore would come talk with authorization from the president, they could likely make peace on American terms (15 September 1802) {this letter forwarded to SecState}
+
 
 ## Through other nations
 
