--- a/Gloria.page
+++ b/Gloria.page
@@ -1,3 +1,6 @@
 This ship, captained by [Joseph Bounds](), was hired by [William Eaton]() as part of his plan for a [Coup in Tripoli](). [Alexander Murray]() disapproved of the plan, including the hiring of the *Gloria*, and tried to dismiss the ship. Eaton fought back and continued to use the *Gloria* as a dispatch vessel and transport.
 
+- Uncertain when the *Gloria* first came into public service; it seems like it might have been very early? [Thomas Jefferson]() writes on 28 August 1801: "I have read Eaton’s correspondence, and form a very respectable opinion of his understanding. I should be disposed to do so too of his honesty: but how, to these two qualities, can we reconcile his extraordinary mission of this vessel?" Is he referring to the *Gloria* here? (The Papers of Thomas Jefferson Digital Edition, ed. James P. McClure and J. Jefferson Looney. Charlottesville: University of Virginia Press, Rotunda, 2008–2016.
+Canonic URL: http://rotunda.upress.virginia.edu/founders/TSJN-01-35-02-0122 [accessed 25 Oct 2016])
+
 - BW2:273: [William Eaton]() instructs Bounds to carry dispatches to Leghorn (from Tunis), get reimbursed from Degen and Purviance, and then carry dispatches from Leghorn back to the USA, 12 September 1802
