--- a/James Leander Cathcart.page
+++ b/James Leander Cathcart.page
@@ -1,3 +1,5 @@
+- [Thomas Jefferson]() writes of Cathcart, 10 February 1802: "he is personally known to me, & pretty well known. he is the honestest & ablest consul we have with the Barbary powers: a man of very sound judgment & fearless." (The Papers of Thomas Jefferson Digital Edition, ed. James P. McClure and J. Jefferson Looney. Charlottesville: University of Virginia Press, Rotunda, 2008–2016. Canonic URL: http://rotunda.upress.virginia.edu/founders/TSJN-01-36-02-0361 [accessed 25 Oct 2016])
+
 - Appointed as consul to Algiers after [Richard O'Brien]() but the dey of Algiers would not recognize him; therefore he never assumed the position (BW2:128)
     - BW2:348: Cathcart feels that his blacklisting is due to [Richard O'Brien]() and the [House of Bacri]() "who are not desirous that any person should be appointed possessed of sufficient intelhgence to investigate their iniquitous practices and the Jews are particularly interested in wishing to have the Consul of the United States entirely dependent on them" (25 January 1803)
     - BW2:3379: Continues to complain about how O'Brien and the Bacris are conspiring against him (30 March 1803)
