--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -2,6 +2,8 @@ Naval officers often gave clues about how they perceived their enemies and even 
 
 # Barbary 
 - BW2:495: Reaction of American sailors to a Tunisian vessel that they brought to: "had she been a Tripoline she would have been prize for the Men were all hot for Battle, friends or Foes. - The sight of a Turban soon enrages them" (22 July 1803) 
+- - 16 August 1802: [Albert Gallatin]() doesn't hold a particularly high opinion of Morocco: "However contrary to the usage of civilized nations the pretensions of Morocco may be, we cannot decide whether they are considered as unreasonable by a nation not within the pale of civilization" (The Papers of Thomas Jefferson Digital Edition, ed. James P. McClure and J. Jefferson Looney. Charlottesville: University of Virginia Press, Rotunda, 2008–2016.
+Canonic URL: http://rotunda.upress.virginia.edu/founders/TSJN-01-38-02-0209 [accessed 25 Oct 2016])
 
 ## Cowardly
 - [John R. Fenwick](), 3 February 1802: "none of our Vessels as yet have been taken, & whilst the Dread of the Americans exists, the pusillanimity of these people will prevent them leaving their Ports" (BW2:47)
