Gallatin on payment

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -28,6 +28,7 @@
 # Use of payment
 ## Price of settlement
 - BW1:149: Joel Barlow to Secretary of State, 20 April 1796: "One ship a year taken by them [Algiers] would amount to a sum equal to maintaining a peace. And they have taken in this way enough to average one ship a year since the American war."
+- 16 August 1802: [Albert Gallatin]() writes, "I sincerely wish you could reconcile it to yourself [Thomas Jefferson] to empower our negotiators to give, if necessary for peace, an annuity to Tripoli. I consider it no greater disgrace to pay them than Algiers; and indeed we share the dishonor of paying those barbarians with so many nations as powerful and interested as ourselves, that, in our present situation, I consider it a mere matter of calculation whether the purchase of peace is not cheaper than the expense of a war which shall not even give us the free use of the Mediterranean trade." (TJ, http://rotunda.upress.virginia.edu/founders/TSJN-01-38-02-0209 [accessed 25 Oct 2016]) 
 
 ## Benefits of settlement
 
