--- a/Relationships among North Africa.page
+++ b/Relationships among North Africa.page
@@ -6,3 +6,6 @@ The Barbary States were technically regencies of the Ottoman Empire, though they
 
 The Barbary States were often seen as being in collusion with each other, even if they weren't.
 - [James Simpson]() notes about Morocco: "We have seen the Emperour since the commencement of the War with Tripoly, do what he could to favour them, all Nations experience the like conduct from every State in Barbary, when they have War with my of the others" (BW2:470, 9 July 1803)
+
+
+- Report detailing the relationship between the Ottoman Empire and the Barbary regencies: http://rotunda.upress.virginia.edu/founders/TSJN-01-18-02-0139-0002 [accessed 25 Oct 2016]
