Heavier than tribute

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -32,6 +32,7 @@
 - 8 April 1803: In a cabinet meeting with 4 secretaries and the attorney general, the unanimous decision was to try to "buy peace of Tripoli"; how that looked exactly was disputed (TJ, http://rotunda.upress.virginia.edu/founders/TSJN-01-40-02-0119 [accessed 25 Oct 2016])
 
 ## Benefits of settlement
+- David Austin (a random person?) writes to [Thomas Jefferson](): "As things stand, what can you promise the Nation, over which your Sceptre is extended; but the permanent expense of a permanent naval establishment in the Mediterranean? The expense would be heavier than the tribute: & the tribute is already the heaviest curse that hangs upon our hand." I think he's in favor of payment? I really can't tell. (TJ, http://rotunda.upress.virginia.edu/founders/TSJN-01-34-02-0183 [accessed 25 Oct 2016])
 
 ## [Objections to settlement]()
 
