--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -1,6 +1,7 @@
 While the navy was sending ships to the Mediterranean, the Secretary and other government officials also had other matters to attend to at home. Not only were they trying to fit out and dispatch frigates as fast as they were ready to go to sea, but they were also trying to build larger vessels, 74-gun ships of the line. Additionally, the secretary was making provisions to build a series of navy yards all along the coast. These other projects took manpower, supplies, and time. They did, however, allow some older commanders who were not fit for sea service anymore to stay connected to the navy as supervisors of the building of these ships and yards.
 
-
+## Importance of keeping the public optimistic
+- November 1801: [Albert Gallatin]() recommends stronger language for [Thomas Jefferson]()'s annual message: "More stress might be laid on the protection afforded by the frigates to our  vessels which had been long blockaded, and on the imminent peril from which our commerce in the Atlantic was preserved by the timely arrival of our squadron at the moment when the Tripolitans had already reached Gibraltar" (https://memory.loc.gov/service/mss/mtj//mtj1/025/025_0179_0186.pdf)
 
 ### Congress
 - BW2:49: Secretary of the Navy writes to [Samuel L. Mitchell]() about the problem of the smallness of the naval food ration, suggesting that Congress amend the ration to provide more meat and vegetables (see also [Stores]())
