Hamet is opposite of Yusuf

--- a/Internal power struggles in Tripoli.page
+++ b/Internal power struggles in Tripoli.page
@@ -1,7 +1,13 @@
 [Yusuf Karamanli]() had to deal with more than just fractious and difficult negotiations with other nations; he also had to keep his own government intact. This was no small feat; Karamanli was a usurper and seems to have held his power relatively tenuously.
 
+## Power struggles before Americans arrive
+- [Yusuf Karamanli]() takes control in 1795 over his older brother [Hamet Karamanli]()
+    - British consul [Simon Lucas]() seems to think that this is a good change: "Sidi Ahmed having at best but a very weak understanding, gave himself entirely up to his pleasures, was almost in a constant state of inebriation and consequently neglected his government. Sidi Yusef, who is quite the opposite of his brother's neither drinks nor smokes, and, having studied for some years in the school of adversity, acquired a thorough knowledge of the constitution of the government and disposition of his subjects, who love him, almost to adoration." (Seton Dearden, *A Nest of Corsairs: The Fighting Karamanlis of Tripoli* (London: J. Murray, 1976), 138).
+
+
 ## [Coup in Tripoli]()
 - [Hamet Karamanli](), Yusuf's brother, colluded with the American navy to attempt a coup
+
 
 ## Quashing rebellions
 - BW2:486: [Nicholas Nissen]() reports that Yusuf is mounting an army against the inhabitants of the Guerrian mountains, who were revolting (15 July 1803)
