--- a/Internal power struggles in Tripoli.page
+++ b/Internal power struggles in Tripoli.page
@@ -2,7 +2,7 @@
 
 ## Power struggles before Americans arrive
 - [Yusuf Karamanli]() takes control in 1795 over his older brother [Hamet Karamanli]()
-    - British consul [Simon Lucas]() seems to think that this is a good change: "Sidi Ahmed having at best but a very weak understanding, gave himself entirely up to his pleasures, was almost in a constant state of inebriation and consequently neglected his government. Sidi Yusef, who is quite the opposite of his brother's neither drinks nor smokes, and, having studied for some years in the school of adversity, acquired a thorough knowledge of the constitution of the government and disposition of his subjects, who love him, almost to adoration." (Seton Dearden, *A Nest of Corsairs: The Fighting Karamanlis of Tripoli* (London: J. Murray, 1976), 138).
+    - British consul [Simon Lucas]() seems to think that this is a good change, writing 30 June 1795: "Sidi Ahmed having at best but a very weak understanding, gave himself entirely up to his pleasures, was almost in a constant state of inebriation and consequently neglected his government. Sidi Yusef, who is quite the opposite of his brother's neither drinks nor smokes, and, having studied for some years in the school of adversity, acquired a thorough knowledge of the constitution of the government and disposition of his subjects, who love him, almost to adoration." (Seton Dearden, *A Nest of Corsairs: The Fighting Karamanlis of Tripoli* (London: J. Murray, 1976), 138).
 
 
 ## [Coup in Tripoli]()
