Reports about Barbary forces

--- a/Front Page.page
+++ b/Front Page.page
@@ -36,6 +36,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Pre-war relations with European nations]()
 - [Naval officers’ relations with their own diplomats]()
 - [Race]()
+- [Reports about Barbary forces]()
 - [Relationships among North Africa]()
 - [Relations with government at home]()
 - [Relations with merchants and civilians]()
