more useful than a blockade

--- a/Strategy.page
+++ b/Strategy.page
@@ -34,6 +34,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 
 
 ### [Blockade effectiveness]()
+- [Nicholas Nissen]() notes that he hasn't seen any American vessels in the last three months, because they are cruising around Cape Bon, Malta, and Sicily with schooners. He notes, "this plan is well conceiv'd and I presume more useful than a Blockade" (19 September 1803, BW3:62)
 
 # [Coup in Tripoli]()
 -  [William Eaton]() first proposes a scheme to get [Yusuf Karamanli]() on board an American vessel to capture him? (BW1:567)
