--- a/Communications.page
+++ b/Communications.page
@@ -11,6 +11,7 @@
 - 2 February 1803: [Richard O'Brien]() writes to [John Gavino]() that because "our affairs are Verging on to a Lee shore and no Calculating on the force of the Deys squalls you will pleas to direct for me under Cover to Mr Nordeling the Swede Consul at Algiers" (BW2:357)
 - 13 July 1803: SecNav orders [Edward Preble]() to maintain contact with the diplomats in the other Barbary states (BW2:476)
 - 1 August 1803: [James Leander Cathcart]() writes to [Richard Valentine Morris]() with a dizzying account of all the places and ways he tried to get to somewhere that he could meet up with Morris, only to not be able to actually connect with him (BW2:503)
+- 19 September 1803: [James Simpson]() writes that he has received information from [John Rodgers]() about the *Meshouda* that would have affected his actions: "if I had been possessed before [of this information], matters respecting her, would have been in a Very different State, to what they are" (though he doesn't elaborate on how things would have been different) (BW3:62)
 
 ## Communications amongst the squadron
 - Communications were terribly slow even though the space the squadron occupied was not that large
