--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -66,6 +66,7 @@
 - BW3:57: [Edward Preble]() hears from [James Simpson]() that the governor of Tangier did not act on his own about the authorization to capture American ships; "Mr Simpson found an Opportunity to slip a letter into the packet, which confirms me in my first opinion that the Governor of Tangier has not acted without higher Authority, he states that he has a scene of the deepest treachery to unfold as soon as a personal interview can take place, and that the Emperor has been guilty of another act of hostility at Mo adore by seizing on the Brig Hannah of Salem Joseph W. Williams Master (who was there on a trading voyage) and making prisioners of the crew" (18 September 1803)
     - "I am fully aware, that it is for our interest to have peace with Morocco but it is not necessary, or proper that we should be so over anxious, as to induce them to believe we must have it, on any terms they choose to dictate"
 - BW3:59: [Tobias Lear]() asks [Edward Preble]() to stay a little while in Gibraltar until things can be ironed out with Morocco, rather than risking commerce by taking a frigate away from Morocco to take Lear to Algiers (18 September 1803)
+- BW3:63: [Edward Preble]() reports that an American vessel [the *Hannah*] has been captured and brought to Mogadore; he tells [Richard Somers]() that he is authorized to bring in vessels belonging to the bashaw of Tripoli OR the emperor of Morocco (19 September 1803)
 
 # Other nations' relations with Morocco
 - James Simpson reports on others' relations with Morocco:
