--- a/Encounters between Europe and Barbary.page
+++ b/Encounters between Europe and Barbary.page
@@ -6,3 +6,7 @@
 
 ## France and Algiers
 - BW2:195: [James McKnight]() reports that the French have landed 20,000 men at Oran near Algiers, with another 30,000 on their way, to attack Algiers (seems unlikely?), 8 July 1802
+
+
+## Diplomacy between Europe and Barbary
+- "However, as Panzac has argued, an overemphasis on piratical warfare— the “Barbary legend”— can mask the “multiple but unequal relations” between Europe and the Maghreb.20 Magali Morsy suggests that by the late eighteenth century corsair activities had become a key element of politics, a way of maintaining diplomatic relations against stronger powers, and “a useful and indeed necessary way of upholding trade.”21" --IAN COLLER, “Barbary and Revolution: France and North Africa, 1789-1798,” in French Mediterraneans, Transnational and Imperial Histories (University of Nebraska Press, 2016), 59, http://www.jstor.org/stable/j.ctt1d8h8t4.7.
