--- a/Relationships among North Africa.page
+++ b/Relationships among North Africa.page
@@ -1,5 +1,10 @@
 The Barbary States were technically regencies of the Ottoman Empire, though they seem to have been fairly independent of Turkish control. Only on occasion did the Turkish government intervene in Barbary affairs.
 
+- Ian Coller argues that the relationship between the Barbary States and the Ottoman Empire was more complicated than just almost-autonomous states or "loyal provinces": "The emergence of powerful local leaders
+seeking to increase their autonomy at the expense of the empire was a
+phenomenon common to many of the outer provinces of the empire, just
+as revolutions became a relatively frequent occurrence at the center." (Coller 57)
+
 - [Richard O'Brien]() reports that the Turkish government gifted Algiers with recruits and naval stores. He suggests two possible motives for this move:
     1. "to strengthen the hands of this State, the principal political Redoubt of the Ottoman Empire" or
     2. "to lull this Regency into security to plunder them" (BW1:617)
