Algiers as republic

--- a/Algiers.page
+++ b/Algiers.page
@@ -1,6 +1,10 @@
 - BW1:617-18: [Richard O'Brien]() records that the dey has requested 500 mahogany boards of 1-4 inches, as well as long planks and spikes (7 November 1801)
 - BW1:620-21: [Richard O'Brien]() accepts $30,000 from [Richard Dale]() as payment for the annual stipend to the Dey
 - BW2:232: SecNav informs [Richard Valentine Morris]() that the [USS *New York*]() is being dispatched with $30,000 for Algiers in lieu of stores (13 August 1802)
+- 
+
+## Politics of Algiers
+- Algiers was a republic of sorts: "According to the Abbé Poiret, whereas Tunis was “a monarchical state which passes directly from father to son, Algeria is a republic whose elected government is extremely tumultuous. When the moment comes to name a new dey, the regency, composed of the chief commanders of the militia, meets to carry out the election, which usually nominates one of the chief ministers. . . . But if some other person has formed a powerful party among the troops, and if he has enough courage to assassinate the dey and replace him on the throne, the sovereign authority rests in his hands until someone equally audacious wrests it from him by the same means.”3 (Coller 67)
 
 ## Wealth of Algiers 
 According to Richard O'Brien, this is the state of the regency of Algiers, July 1802 (B2:198)
