close ties between France and Algiers

--- a/Encounters between Europe and Barbary.page
+++ b/Encounters between Europe and Barbary.page
@@ -6,6 +6,7 @@
 
 ## France and Algiers
 - BW2:195: [James McKnight]() reports that the French have landed 20,000 men at Oran near Algiers, with another 30,000 on their way, to attack Algiers (seems unlikely?), 8 July 1802
+- Coller: "Evidence of close personal connection between the dey and individuals within the French government recurs at other points through the revolutionary period and suggests far more frequent traffic across the Mediterranean than most historians have imagined." (Coller 69)
 
 
 ## Diplomacy between Europe and Barbary
