--- a/Relationships among North Africa.page
+++ b/Relationships among North Africa.page
@@ -4,6 +4,7 @@ The Barbary States were technically regencies of the Ottoman Empire, though they
 seeking to increase their autonomy at the expense of the empire was a
 phenomenon common to many of the outer provinces of the empire, just
 as revolutions became a relatively frequent occurrence at the center." (Coller 57)
+    - In 1798, "To ensure the safety of their shipping, the French sought to maintain their alliances with the Barbary States, expecting them to act independently of the Ottoman Porte. However the Directory drastically underestimated the strength of the bonds connecting these further provinces to the sultan" (Coller 71)
 
 - [Richard O'Brien]() reports that the Turkish government gifted Algiers with recruits and naval stores. He suggests two possible motives for this move:
     1. "to strengthen the hands of this State, the principal political Redoubt of the Ottoman Empire" or
